--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
     <header>
         <h1>
-            <a href="main.html"><span style="color: black;">plan</span></a>
+            <a href="index.html"><span style="color: black;">plan</span></a>
         </h1>
     </header>
     <nav>
