--- a/plan.html
+++ b/plan.html
@@ -201,7 +201,7 @@
 <body>
     <header>
         <h1>
-            <a href="main.html"><span style="color: black;">plan</span></a>
+            <a href="index.html"><span style="color: black;">plan</span></a>
         </h1>
     </header>
     <nav>
