--- a/selected place.html
+++ b/selected place.html
@@ -221,7 +221,7 @@
 <body>
     <header>
         <h1>
-            <a href="main.html"><span style="color: black;">plan</span></a>
+            <a href="index.html"><span style="color: black;">plan</span></a>
         </h1>
     </header>
     <nav>
