--- a/selected place.html
+++ b/selected place.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>selected place</title>
+    <link rel="stylesheet" href="mobileact.css">
     <style>
         body {
             margin: 0;
@@ -207,21 +208,12 @@
         }
 
 
-        @media (max-width: 768px) {
-            .map-row {
-                flex-direction: column;
-            }
-
-            iframe {
-                height: 250px;
-            }
-        }
     </style>
 </head>
 <body>
     <header>
         <h1>
-            <a href="main.html"><span style="color: black;">plan</span></a>
+            <a href="index.html"><span style="color: black;">plan</span></a>
         </h1>
     </header>
     <nav>
